--- a/WebContent/02_javascriptBasico/10_Slider/slider.html
+++ b/WebContent/02_javascriptBasico/10_Slider/slider.html
@@ -20,6 +20,8 @@
       
       // Slider
       function cctwslide(){
+    	  $('#primero').src=""; referencia por id
+    	  $(".cctwslide")
         $('.'+ nombre +' img:gt(0)').hide();
         var actual = 0;
         setInterval(function(){
@@ -37,7 +39,7 @@
   </head>
   <body>
     <div class="cctwslide">
-      <img src="http://www.comocreartuweb.com/consultas/image.php?u=20518&dateline=1305034311" alt="Imagen 1" />
+     <img id="primero"src="http://www.comocreartuweb.com/consultas/image.php?u=20518&dateline=1305034311" alt="Imagen 1" />
       <img src="http://www.comocreartuweb.com/consultas/images/misc/como-crear-tu-web.gif" alt="Imagen 2" />
       <img src="http://www.comocreartuweb.com/imagenes/comunes/estilo1024/sered2.png" alt="Imagen 3" />
       <img src="http://www.comocreartuweb.com/comunes/redes.jpg" alt="Imagen 4" />
